fix vertical align on safari

--- a/datepicker.css
+++ b/datepicker.css
@@ -38,7 +38,7 @@
   padding: 0 10px;
   padding: 0 10px;
   top: 50%;
-  margin-top: -50%;
+  margin-top: -40px;
 }
 
 .rangepicker-content .rangepicker-actions button {
